<resources>
    <string name="app_name">Eva_projectg6</string>
    <string name="app_id">208067942857620</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loginButtonText">Login</string>
    <string name="eUsername">Username</string>
    <string name="registreerLink">nog geen account Registreer!</string>
    <string name="title_activity_register">Register</string>
    <string name="firstname">Voornaam</string>
    <string name="lastname">Familienaam</string>
    <string name="username">Username</string>
    <string name="emailVoorbeeld">Vb@voorbeeld.be</string>
    <string name="dateOfBirth">Geboortedatum</string>
    <string name="male">man</string>
    <string name="female">vrouw</string>
    <string name="student">student</string>
    <string name="single"><single>single</single></string>
    <string name="inRelationship">in relatie</string>
    <string name="password">Password</string>
    <string name="register">Registreer</string>
    <string name="day">Dag</string>
    <string name="month">Maand</string>
    <string name="year">Jaar</string>
    <string name="rFirstnameVal">Vul uw voornaam in</string>
    <string name="rLastnameVal">Vul uw achternaam in</string>
    <string name="rUsernameVal">Vul uw username in</string>
    <string name="rEmailVal">Vul een geldig email in</string>
    <string name="rDayVal">Vul een geldige dag in</string>
    <string name="rMonthVal">Vul een maand in</string>
    <string name="rYearVal">Vul een geldig jaar in</string>
    <string name="rPassVal">8 characters lang  en moet cijfers en letters bevatten </string>
    <string name="rMissmatchVal">Passwoord komt niet overeen</string>
    <string name="parseException">Alleen cijfers in dit vak</string>
    <string name="title_activity_register_main">RegisterMain</string>
    <string name="waitScreen">Eventjes wachten a.u.b.</string>
    <string name="userInloggen">user wordt ingelogd</string>
    <string name="inlogCancelled">Inloggen mislukt</string>
    <string name="wrongPassword">verkeerd passwoord</string>
    <string name="firstTab">eerste stap</string>
    <string name="secondTab">tweede stap</string>
    <string name="thirdTab">derde stap</string>
    <string name="heeftKinderen">Heeft u kinderen?</string>
    <string name="difficultLabel">Hoeveel keer eet u al vegetarisch?</string>
    <string name="rEasy">0-1 dag</string>
    <string name="rMedium">2-5 dagen</string>
    <string name="rHard">5 of meer</string>
    <string name="title_activity_choose_challenge">ChooseChallenge</string>
    <string name="title_activity_kies_challenges">kiesChallenges</string>
    <string name="titelKiesChallenges">Maak een keuze uit volgende challenges ! </string>
    <string name="titelChallengeDag">Challenge Dag </string>
    <string name="title_activity_view_challenges">ViewChallenges</string>
    <string name="duplicateUsername">username is al in gebruik</string>
    <string name="birthDate">vul uw geboortedatum in (dd-mm-yyyy)</string>
    <string name="title_activity_facebook_register">FacebookRegister</string>
    <string name="registerFacebook">Om de werking van de app te garanderen hebben we nog enkele gegevens nodig:</string>
    <string name="rate">Rate deze challenge!</string>
    <string name="title_activity_toolbar">Toolbar</string>
    <string name="usernameTitle">Uw Username</string>
    <string name="usernameSummary">Verander hier jouw username</string>
    <string name="userEmail">Uw email</string>
    <string name="userEmailSum">Verander hier jouw email</string>
    <string name="userHasChildren">Heeft u kinderen?</string>
    <string name="userHasChildrenSum">Verander hier of je kinderen hebt of niet. word gebruikt om challenges aan te maken</string>
    <string name="userIsStudent">Bent u student</string>
    <string name="userIsStudentSum">Verander hier of je al dan niet student bent. Word gebruikt om challenges aan te maken</string>
    <string name="Diffic"></string>
    <string-array name="listArray">
        <item>0-1 dag</item>
        <item>2-5 dagen</item>
        <item>5 of meer</item>
    </string-array>

    <string-array name="listValues">
        <item>easy</item>
        <item>medium</item>
        <item>hard</item>
    </string-array>
    <string name="challengeDone">Ik heb zojuist een challenge voltooid! </string>
    <string name="challengeSetDone">Ik heb zojuist mijn 21-dagen challenge voltooid!
        Een goede start naar een gezondere levenstijl!</string>
    <string name="challengeSetDialogTitle">Gefeliciteerd met het voltooien van je 21-dagen challenge!</string>
    <string name="posButtonDialog">Voltooi en deel</string>
    <string name="negButtonDialog">Voltooi </string>
    <string name="title_activity_start_challenge_set">StartChallengeSet</string>
    <string name="startChallengeReeks">Neem deel aan de 21-dagen challenge!</string>
    <string name="challengeBut">BEGIN</string>
    <string name="title_activity_login_redirect">LoginRedirect</string>
</resources>
