<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:title="@string/usernameTitle"
        android:key="Username"
        android:summary="@string/usernameSummary"></EditTextPreference>
    <EditTextPreference android:title="@string/userEmail"
        android:key="Email"
        android:summary="@string/userEmailSum"></EditTextPreference>
    <CheckBoxPreference android:title="@string/userHasChildren"
        android:summary="@string/userHasChildrenSum"
        android:key="Haschildren" />
    <CheckBoxPreference android:title="@string/userIsStudent"
        android:summary="@string/userIsStudentSum"
        android:key="IsStudent" />
    <ListPreference     android:title="@string/difficultLabel"
        android:summary="@string/difficultLabel"
        android:key="Difficulty"
        android:entries="@array/listArray"
        android:entryValues="@array/listValues" />
</PreferenceScreen>