<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/rLayout"
    android:gravity="center_horizontal"
    android:paddingTop="100dip"
        >
    <EditText

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/firstname"
        android:ems="10"
        android:id="@+id/rFirstname"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/lastname"
        android:ems="10"
        android:id="@+id/rLastname" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/rUsername" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rsz_1cow"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="35dp"/>

</LinearLayout>